WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83975
[Cairo] Separate image encoding from dataURL construction
https://bugs.webkit.org/show_bug.cgi?id=83975
Summary
[Cairo] Separate image encoding from dataURL construction
noel gordon
Reported
2012-04-14 04:14:04 PDT
[Cairo] Separate image encoding from dataURL construction
Attachments
Patch
(3.03 KB, patch)
2012-04-14 04:37 PDT
,
noel gordon
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.00 KB, patch)
2012-04-15 17:29 PDT
,
noel gordon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
noel gordon
Comment 1
2012-04-14 04:37:52 PDT
Created
attachment 137204
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-15 17:16:15 PDT
Comment on
attachment 137204
[details]
Patch Rejecting
attachment 137204
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12409692
noel gordon
Comment 3
2012-04-15 17:29:46 PDT
Created
attachment 137256
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-04-15 19:14:26 PDT
Comment on
attachment 137256
[details]
Patch for landing Clearing flags on attachment: 137256 Committed
r114216
: <
http://trac.webkit.org/changeset/114216
>
WebKit Review Bot
Comment 5
2012-04-15 19:14:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug